# hacksmu26

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLASSIFIER_ANALYSIS.md  CLAUDE.md  Dockerfile.backend  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt
config/: .env.example  docker-compose.yml  echofield.config.yml
data/: README.md  metadata.csv
docs/: API_SPEC.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  TECH_STACK.md  UI_UX_SPEC.md
echofield/: __init__.py  __main__.py  auth.py  batch_store.py  config.py  data_loader.py  db.py  metrics.py  model_registry.py  models.py  server.py  webhook_manager.py  websocket.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
models/: README.md
results/: summary.csv
scripts/: analyze_audio_files.py  batch_process.py  benchmark.py  build_before_after_graphs.py  build_rumble_showcase.py  evaluate_noise_classifier.py  improve_catalog_metrics.py  refresh_demo_data.py  regenerate_processed_data.py  reorganize_data.py  review_inventory_labels.py  run_batch.py  run_external_classifier_pipeline.py  sync_catalog_with_cache.py
tests/: conftest.py  test_active_learning.py  test_api.py  test_auth.py  test_call_gate.py  test_cross_species.py  test_data_loader.py  test_emotion_classifier.py  test_ensemble_and_detector.py  test_exporter.py  test_feature_engineer.py  test_infrasound.py  test_issue_regressions.py  test_live_recording.py  test_ml_classifier.py  test_ml_endpoints.py  (+6 more)
(+580 files in other folders)
