[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echofield"
version = "0.1.0"
description = "Elephant vocalization noise removal and research platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "noisereduce>=3.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
app = "echofield.server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["echofield*"]
